# hubcontroller-v2

./: .gitignore  STAGE1_NOTES.md  pyproject.toml
src/hubcontroller/: main.py
src/hubcontroller.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/hubcontroller/adapters/plc/: ack_poller.py  ack_specs.py  plc_adapter.py  plc_gateway.py
src/hubcontroller/adapters/plc/commands/: commands.py
src/hubcontroller/adapters/plc/gateway/: ack_gateway.py  exec_gateway.py
src/hubcontroller/adapters/plc/protocol/: ack_decoder.py  ack_snapshot.py
src/hubcontroller/adapters/plc/protocol/decoders/: ack_decoder.py
src/hubcontroller/adapters/plc/protocol/specs/: ack_specs.py
src/hubcontroller/config/: environment.py
src/hubcontroller/domain/: README.md  commands.py  guard.py  hub_state.py  hub_state_provider.py  processor.py  registry.py
src/hubcontroller/domain/exec/: exec_registry.py
tests/unit/: smoke_test.py  test_command_registry_stage1.py
